name:                hspacman
version:             0.1.0.0
synopsis:            An implementation of the famous classical Namco Pacman Game in haskell
-- description:         
-- license:             
license-file:        LICENSE
author:              juffel, wans hurst, EsGeh
maintainer:          SamuelGfroerer@googlemail.com
-- copyright:           
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable hspacman
  main-is:             HsPacMan.hs
  --exposed-modules:       
  other-modules:       
    GameData,
    LevelGenerator,
    RandomUtils,
    Renderpipeline,
    Vector2D
  -- other-modules:       
  build-depends:
    base == 4.9.*,
    gloss,
    sgData,
    random,
    MonadRandom,
    mtl,
    transformers
  hs-source-dirs:      src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/EsGeh/hspacman.git

    -- random >= 1.0.1.1,
    -- MonadRandom >= 0.0.1.1,
    -- base >=4.5.0.0,
    -- gloss ==1.7.*
    -- HsUtils ==0.1.*
